tests/compile-fail/unbounded-typevar.plk
fn foo<T>() {}

fn bar() {
    foo(); // ERROR: could not completely infer type
}
